--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 							</form>
 
 						</div>
-					</section> -->
+					</section> 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
